<resources>
    <string name="app_name">PaP</string>
    <string name="PaPMainMap">MainMap</string>
    <string name="PaPMaalot">מעלות</string>
    <string name="PaPShderot">שדרות</string>
    <string name="PaPKfarVradim">כפר ורדים</string>
    <string name="PaPTalEl">טל אל</string>
    <string name="PaPCholon">חולון</string>
    <string name="PaPAshdod">אשדוד</string>
    <string name="PaPTfachot">טפחות</string>
    <string name="PaPDalton">דלתון</string>
    <string name="PaPBarYochay">בר יוחאי</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_info_window_xml">InfoWindowXml</string>
    <string name="LoremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_activity_home_info">HomeInfo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navdraw">NAVDRAW</string>
    <string name="family_space">משפחת</string>
</resources>
